crates/obby-client/tests/snapshots/transcript__channel.snap
---
source: crates/obby-client/tests/transcript.rs
expression: "replay(include_str!(\"transcripts/channel.irc\"))"
---
== sent ==
CAP LS 302
NICK me
USER me 0 * me
WHO #obby

== connection ==
phase: Registered
nick: me
casemapping: Rfc1459

== channels ==
#obby (key #obby)  unread 2 mentions 0
  topic: a channel about obby
  member @alice (key alice)
  member carol (key carol)
  member {DAVE} (key {dave})
  [1788688800000] Privmsg <alice> morning
  [1788688801000] Ctcp { command: "ACTION" } <bob> waves

== events ==
Registered { nick: "me" }
IsupportToken { token: "CASEMAPPING", value: Some("rfc1459") }
IsupportToken { token: "CHANTYPES", value: Some("#") }
IsupportToken { token: "PREFIX", value: Some("(qaohv)~&@%+") }
IsupportToken { token: "CHANMODES", value: Some("beI,k,l,imnpst") }
ModelChanged { change: ChannelJoined { channel: "#obby" } }
ModelChanged { change: ChannelMembersChanged { channel: "#obby" } }
RawLine { message: Message { tags: Tags([]), source: Some(Source { name: "irc.example.org", user: None, host: None }), command: "366", params: ["me", "#obby", "End of /NAMES list."] } }
ModelChanged { change: ChannelTopicChanged { channel: "#obby" } }
ModelChanged { change: ChannelModesChanged { channel: "#obby" } }
ModelChanged { change: ChannelMembersChanged { channel: "#obby" } }
ModelChanged { change: MessageAdded { target: "#obby", key: MessageKey { time_ms: 1788688800000, seq: 0 } } }
ModelChanged { change: MessageAdded { target: "#obby", key: MessageKey { time_ms: 1788688801000, seq: 1 } } }
ModelChanged { change: NickChanged { from: "[dave]", to: "{DAVE}" } }
ModelChanged { change: ChannelMembersChanged { channel: "#obby" } }
