crates/obby-client/tests/snapshots/transcript__conversation.snap
---
source: crates/obby-client/tests/transcript.rs
expression: "replay(include_str!(\"transcripts/conversation.irc\"))"
---
== sent ==
CAP LS 302
NICK me
USER me 0 * me
CAP REQ message-tags
CAP REQ server-time
CAP REQ batch
CAP REQ echo-message
CAP REQ draft/read-marker
CAP END
WHO #obby

== connection ==
phase: Registered
nick: me
casemapping: Rfc1459

== channels ==
#obby (key #obby)  unread 0 mentions 0
  read to: 2026-09-06T10:00:05.000Z
  member alice (key alice) account=alice_acct away=lunch
  [1788688800000] Privmsg <alice> morning everyone
  [1788688805000] Privmsg <alice> me: can you look at this?
      👍 bob
  [1788688810000] Privmsg <alice> ops only note
  [1788688820000] Privmsg <alice> oops wrong channel
      redacted

== events ==
CapabilitiesAcknowledged { names: ["message-tags"] }
CapabilitiesAcknowledged { names: ["server-time"] }
CapabilitiesAcknowledged { names: ["batch"] }
CapabilitiesAcknowledged { names: ["echo-message"] }
CapabilitiesAcknowledged { names: ["draft/read-marker"] }
Registered { nick: "me" }
IsupportToken { token: "CASEMAPPING", value: Some("rfc1459") }
IsupportToken { token: "CHANTYPES", value: Some("#") }
IsupportToken { token: "STATUSMSG", value: Some("@+") }
IsupportToken { token: "PREFIX", value: Some("(ov)@+") }
ModelChanged { change: ChannelJoined { channel: "#obby" } }
ModelChanged { change: ChannelMembersChanged { channel: "#obby" } }
ModelChanged { change: MessageAdded { target: "#obby", key: MessageKey { time_ms: 1788688800000, seq: 0 } } }
ModelChanged { change: MessageAdded { target: "#obby", key: MessageKey { time_ms: 1788688805000, seq: 1 } } }
ModelChanged { change: MessageReacted { target: "#obby", msgid: "a2" } }
ModelChanged { change: MessageAdded { target: "#obby", key: MessageKey { time_ms: 1788688810000, seq: 2 } } }
ModelChanged { change: MessageAdded { target: "#obby", key: MessageKey { time_ms: 1788688820000, seq: 3 } } }
ModelChanged { change: MessageRedacted { target: "#obby", msgid: "a4" } }
ModelChanged { change: ChannelMembersChanged { channel: "#obby" } }
ModelChanged { change: ReadMarkerMoved { target: "#obby" } }
