crates/obby-client/tests/snapshots/transcript__obby_extensions.snap
---
source: crates/obby-client/tests/transcript.rs
expression: "replay(include_str!(\"transcripts/obby.irc\"))"
---
== sent ==
CAP LS 302
NICK me
USER me 0 * me
CAP REQ message-tags
CAP REQ server-time
CAP REQ batch
CAP REQ draft/named-modes
CAP REQ obsidianirc/cmdslist
CAP REQ obsidianirc/voice
CAP END
WHO #obby %tcuhnfar,332
WHO ^general %tcuhnfar,332

== connection ==
phase: Registered
nick: me
casemapping: Ascii

== channels ==
#obby (key #obby)  unread 1 mentions 0
  named modes: obsidianirc/censor obsidianirc/history=30d
  member @alice (key alice) account=alice_acct
  [1788688800000] Privmsg <alice> look at https://example.org
      preview: Example Domain
^general (key ^general)  unread 0 mentions 0

== voice room ^general ==
kind Publish, 0 participants

== commands the server allows ==
JOIN PART TOPIC

== events ==
CapabilitiesAcknowledged { names: ["message-tags"] }
CapabilitiesAcknowledged { names: ["server-time"] }
CapabilitiesAcknowledged { names: ["batch"] }
CapabilitiesAcknowledged { names: ["draft/named-modes"] }
CapabilitiesAcknowledged { names: ["obsidianirc/cmdslist"] }
CapabilitiesAcknowledged { names: ["obsidianirc/voice"] }
Registered { nick: "me" }
IsupportToken { token: "CASEMAPPING", value: Some("ascii") }
IsupportToken { token: "CHANTYPES", value: Some("#^$") }
IsupportToken { token: "PREFIX", value: Some("(qaohv)~&@%+") }
IsupportToken { token: "CHANMODES", value: Some("beI,k,l,imnpst") }
IsupportToken { token: "WHOX", value: None }
AllowedCommandsChanged
AllowedCommandsChanged
ModelChanged { change: ChannelJoined { channel: "#obby" } }
ModelChanged { change: ChannelMembersChanged { channel: "#obby" } }
ModelChanged { change: ChannelModesChanged { channel: "#obby" } }
ModelChanged { change: MessageAdded { target: "#obby", key: MessageKey { time_ms: 1788688800000, seq: 0 } } }
ModelChanged { change: MessageAdded { target: "#obby", key: MessageKey { time_ms: 1788688800000, seq: 0 } } }
ModelChanged { change: ChannelJoined { channel: "^general" } }
Voice { channel: "^general", signal: Join { channel: "^general" } }
