crates/obby-client/tests/snapshots/transcript__registration.snap
---
source: crates/obby-client/tests/transcript.rs
expression: "replay(include_str!(\"transcripts/registration.irc\"))"
---
== sent ==
CAP LS 302
NICK me
USER me 0 * me
CAP REQ message-tags
CAP REQ server-time
CAP REQ batch
CAP REQ echo-message
CAP REQ multi-prefix
CAP REQ away-notify
CAP REQ sasl
CAP END
PONG abc123

== connection ==
phase: Registered
nick: me
casemapping: Rfc1459

== channels ==

== events ==
CapabilitiesAcknowledged { names: ["multi-prefix"] }
CapabilitiesAcknowledged { names: ["server-time"] }
CapabilitiesAcknowledged { names: ["message-tags"] }
CapabilitiesAcknowledged { names: ["batch"] }
CapabilitiesAcknowledged { names: ["echo-message"] }
CapabilitiesAcknowledged { names: ["away-notify"] }
Registered { nick: "me" }
IsupportToken { token: "CASEMAPPING", value: Some("rfc1459") }
IsupportToken { token: "CHANTYPES", value: Some("#^$") }
IsupportToken { token: "PREFIX", value: Some("(qaohv)~&@%+") }
IsupportToken { token: "CHANMODES", value: Some("beI,k,l,imnpst") }
